HT-603:Initiate password component fix alignment issue

--- a/components/src/core/components/Input/password-input.scss
+++ b/components/src/core/components/Input/password-input.scss
@@ -1,5 +1,6 @@
 .password-container {
     position: relative;
+    width: 100%;
     .password-strength-check {
       position: absolute;
       right: 0;
